--- a/templates/CustomColumnsOverride/apiextensions.k8s.io.v1.crd.yaml
+++ b/templates/CustomColumnsOverride/apiextensions.k8s.io.v1.crd.yaml
@@ -9,6 +9,8 @@ spec:
       name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "CRD"
             "title" "crd"
