--- a/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
@@ -21,6 +21,8 @@ spec:
       name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "SS"
             "title" "statefulset"
@@ -39,6 +41,8 @@ spec:
       name: Namespace
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "NS"
             "title" "namespace"
@@ -65,6 +69,8 @@ spec:
       name: Created
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
@@ -89,6 +95,8 @@ spec:
       name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "SS"
             "title" "statefulset"
@@ -116,6 +124,8 @@ spec:
       name: Created
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
