--- a/templates/CustomColumnsOverride/discovery.k8s.io.v1.endpointslices.yaml
+++ b/templates/CustomColumnsOverride/discovery.k8s.io.v1.endpointslices.yaml
@@ -8,6 +8,8 @@ spec:
     - name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "P"
             "title" "pod"
