--- a/templates/CustomColumnsOverride/v1.pods.yaml
+++ b/templates/CustomColumnsOverride/v1.pods.yaml
@@ -9,6 +9,8 @@ spec:
       name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "P"
             "title" "pod"
@@ -27,6 +29,8 @@ spec:
       name: Namespace
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "NS"
             "title" "namespace"
@@ -58,11 +62,15 @@ spec:
     - name: Status
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.statuses.pod" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
@@ -88,6 +96,8 @@ spec:
       name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "P"
             "title" "pod"
@@ -123,11 +133,15 @@ spec:
     - name: Status
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.statuses.pod" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
@@ -152,6 +166,8 @@ spec:
     - name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "P"
             "title" "pod"
@@ -169,6 +185,8 @@ spec:
     - name: Namespace
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "NS"
             "title" "namespace"
@@ -203,11 +221,15 @@ spec:
     - name: Status
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.statuses.pod" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
@@ -233,6 +255,8 @@ spec:
       name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "P"
             "title" "pod"
@@ -268,11 +292,15 @@ spec:
     - name: Status
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.statuses.pod" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
