--- a/templates/CustomColumnsOverride/argocd/argoproj.io.v1alpha1.applications.yaml
+++ b/templates/CustomColumnsOverride/argocd/argoproj.io.v1alpha1.applications.yaml
@@ -10,6 +10,8 @@ spec:
       name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.pod.icon" . | nindent 8}}
         {{ include "incloud-web-resources.factory.linkblock" (dict
             "reqIndex" 0
@@ -23,6 +25,8 @@ spec:
       name: Namespace
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.icon" (dict
             "text" "NS"
             "title" "namespace"
@@ -52,6 +56,8 @@ spec:
       name: Created
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
@@ -82,6 +88,8 @@ spec:
       name: Name
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.pod.icon" . | nindent 8}}
         {{ include "incloud-web-resources.factory.linkblock" (dict
             "reqIndex" 0
@@ -107,6 +115,8 @@ spec:
       name: Created
       type: factory
       customProps:
+        disableEventBubbling: true
+        items:
         {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
