--- a/templates/CustomColumnsOverride/autoscaling.v2.horizontalpodautoscalers.yaml
+++ b/templates/CustomColumnsOverride/autoscaling.v2.horizontalpodautoscalers.yaml
@@ -2,7 +2,7 @@
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomColumnsOverride
 metadata:
-  name: "stock-cluster-apps.v1.daemonsets"
+  name: "stock-cluster-autoscaling.v2.horizontalpodautoscalers"
 spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
@@ -12,9 +12,9 @@ spec:
         disableEventBubbling: true
         items:
         {{ include "incloud-web-resources.icon" (dict
-            "text" "DS"
-            "title" "ds"
-            "backgroundColor" "#004080"
+            "text" "HPA"
+            "title" "horizontalpodautoscaler"
+            "backgroundColor" "#2b9af3"
           )| nindent 8
         }}
         {{ include "incloud-web-resources.factory.linkblock" (dict
@@ -22,7 +22,7 @@ spec:
             "type" "name"
             "jsonPath" ".metadata.name"
             "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
-            "factory" "daemonset-details"
+            "factory" "horizontalpodautoscaler-details"
           ) | nindent 12 
         }}
     - jsonPath: .metadata.namespace
@@ -47,9 +47,26 @@ spec:
     - jsonPath: .metadata.labels
       name: Labels
       type: array
-    - jsonPath: .metadata.ownerReferences[*].name
-      name: Owner
-      type: array
+    - jsonPath: .metadata.labels
+      name: Min replicas
+      type: factory
+      customProps:
+        disableEventBubbling: true
+        items:
+          - type: parsedText
+            data:
+              id: min-replicas-value
+              text: "{reqsJsonPath[0]['.spec.minReplicas']['-']}"
+    - jsonPath: .metadata.labels
+      name: Max replicas
+      type: factory
+      customProps:
+        disableEventBubbling: true
+        items:
+          - type: parsedText
+            data:
+              id: max-replicas-value
+              text: "{reqsJsonPath[0]['.spec.maxReplicas']['-']}"
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -66,15 +83,15 @@ spec:
     - key: Labels
       value: 1
   additionalPrinterColumnsUndefinedValues:
-    - key: Owner
+    - key: Labels
       value: "-"
-  id: "stock-cluster-/apps/v1/daemonsets"
+  id: "stock-cluster-/autoscaling/v2/horizontalpodautoscalers"
 
 ---
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomColumnsOverride
 metadata:
-  name: "stock-namespace-apps.v1.daemonsets"
+  name: "stock-namespace-autoscaling.v2.horizontalpodautoscalers"
 spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
@@ -84,9 +101,9 @@ spec:
         disableEventBubbling: true
         items:
         {{ include "incloud-web-resources.icon" (dict
-            "text" "DS"
-            "title" "ds"
-            "backgroundColor" "#004080"
+            "text" "HPA"
+            "title" "horizontalpodautoscaler"
+            "backgroundColor" "#2b9af3"
           )| nindent 8
         }}
         {{ include "incloud-web-resources.factory.linkblock" (dict
@@ -94,16 +111,32 @@ spec:
             "type" "name"
             "jsonPath" ".metadata.name"
             "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
-            "factory" "daemonset-details"
+            "factory" "horizontalpodautoscaler-details"
           ) | nindent 12 
         }}
     - jsonPath: .metadata.labels
       name: Labels
       type: array
-
-    - jsonPath: .metadata.ownerReferences[*].name
-      name: Owner
-      type: array
+    - jsonPath: .metadata.labels
+      name: Min replicas
+      type: factory
+      customProps:
+        disableEventBubbling: true
+        items:
+          - type: parsedText
+            data:
+              id: min-replicas-value
+              text: "{reqsJsonPath[0]['.spec.minReplicas']['-']}"
+    - jsonPath: .metadata.labels
+      name: Max replicas
+      type: factory
+      customProps:
+        disableEventBubbling: true
+        items:
+          - type: parsedText
+            data:
+              id: max-replicas-value
+              text: "{reqsJsonPath[0]['.spec.maxReplicas']['-']}"
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -119,17 +152,7 @@ spec:
       value: 64
     - key: Labels
       value: 1
-  id: "stock-namespace-/apps/v1/daemonsets"
-
----
-apiVersion: front.in-cloud.io/v1alpha1
-kind: CustomColumnsOverride
-metadata:
-  name: "factory-daemonset-details-volume-list"
-spec:
-  additionalPrinterColumns:
-    - jsonPath: .name
-      name: Name
-      type: string
-  id: "factory-daemonset-details-volume-list"
-
+  additionalPrinterColumnsUndefinedValues:
+    - key: Labels
+      value: "-"
+  id: "stock-namespace-/autoscaling/v2/horizontalpodautoscalers"
